--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,9 +4,19 @@
   переключая тему
 */
 
+
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --tcolor: #000028;
+    --tbckcolor: #FF0070;
+    --focuscolor: #DB00FF;
+    --sectxtcolor: #F1B2CE;
+  }
 }
