--- a/styles/light.css
+++ b/styles/light.css
@@ -4,9 +4,26 @@
   переключая тему
 */
 
-.page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
+ /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+.page.theme_light {
+    --fontcolor: #353430;
+    background-image: url(../images/cover-image-light.png);
+    background-size: cover;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    
+  }
+}
+
+.header__theme-menu-button {
+  /* color: var(--fontcolor); */
+}
+
