--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,19 +4,22 @@
   переключая тему
 */
 
-
-.page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
+ /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+.page.theme_dark {
+  --tcolor: #000028;
+  --tbckcolor: #FF0070;
+  --focuscolor: #DB00FF;
+  --sectxtcolor: #F1B2CE;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
+  :root.theme-dark {
     --tcolor: #000028;
     --tbckcolor: #FF0070;
     --focuscolor: #DB00FF;
     --sectxtcolor: #F1B2CE;
   }
-}
+
