--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  width: 1024px;
+  max-width: 1024px;
   font-family: 'IBM Plex mono', sans-serif;
   background-image: url(../images/cover-image-dark.png);
   background-size: cover;
@@ -16,8 +16,8 @@
   "btn btn btn"
   "focus focus ."
   ". text text";
-  width: 1024px;
-  height: 768px;
+  max-width: 1024px;
+  height: 100vh;
   margin: 0 auto;
   grid-template-rows: 1fr auto 1fr;
   padding: 20px 20px 20px 0; 
@@ -27,11 +27,12 @@
 .header__theme-menu {
   grid-area: btn;
   justify-self: center;
-  /* margin-left: 100px; */
+  padding-inline-start: 20px;
 }
 
 .header__theme-menu-list {
   display: flex;
+  align-content: start;
   gap: 10px;
   font-size: var(--fsize, 18px);
 }
@@ -43,15 +44,21 @@
   height: 26px;
   color: var(--tbckcolor);
   text-transform: lowercase;
+  padding: 0 13px 5px 13px;
 }
 
 .header__theme-menu-button:hover {
   cursor: pointer;
 }
 
-/* .header__theme-menu-button:active {
+.header__theme-menu-button:focus {
+  border: 1px solid #FF0070;
+}
+
+.header__theme-menu-button_active {
   outline: 1px solid #FF0070;
-} */
+  pointer-events: none;
+}
 
 .header-text_container {
   grid-area: text;
@@ -275,7 +282,7 @@
 
 .street {
   grid-area: st;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .a {
@@ -297,4 +304,101 @@
   font-size: var(--titlesize);
   color: var(--focuscolor);
   text-shadow: 2px 2px 0px var(--tbckcolor);
+}
+
+@media (575px < width < 915px) {
+
+  .page {
+    max-width: 768px;
+    
+  }
+
+  .header {
+    grid-template-areas: 
+    "btn btn"
+    "focus focus"
+    "text text";
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .header__theme-menu {
+    grid-column: 2 / span 1;
+    align-self: center;
+    justify-self: end;
+    margin-inline-end: 10px;
+    margin-block-start: 25px;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header-text {
+    max-width: 364px;
+  }
+
+  .header-text_container {
+    grid-column: 2 / span 3;
+    justify-self: end;
+    align-self: center;
+    margin-block-start: 0;
+    margin-block-end: 30px;
+    margin-inline-start: 55px;
+  }
+
+  .list-title {
+    max-width: 100vw;
+  }
+
+  .first-section {
+    width: 768px;
+  }
+
+  .fisrt-section_list {
+    padding-left: 5px;
+  }
+
+  /* .fst {
+    width: 472px;
+  } */
+
+  .section-title {
+    max-width: 236px;
+  }
+
+  .section-text {
+    width: fit-content;
+    height: min-content;
+  }
+
+  .second-section_list {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: none;
+    gap: 0;
+  }
+
+  .second-section_list-item {
+    gap: 10px;
+  }
+
+  .third-section {
+    margin-block-start: 75px;
+  }
+
+  .third-section_list {
+    max-width: 472px;
+    height: min-content;
+    /* padding-inline-end: 30px; */
+  }
+
+  .third-section_list-item {
+    
+  }
+
+  .footer {
+    width: 768px;
+    height: 1024px;
+  }
 }
