--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,6 +5,7 @@
 :root { 
   --fsize: 18px;
   --titlesize: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --mtitlesize: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --mainlineh: 23.4px;
   --mainfontf: 'IBM Plex mono';
 }
