--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 .page {
   max-width: 1024px;
-  font-family: 'IBM Plex mono', sans-serif;
+  font-family: var(--mainfontf);
   background-image: url(../images/cover-image-dark.png);
   background-size: cover;
   background-position: center;
@@ -294,8 +294,8 @@
   justify-content: center;
   align-items: center;
   margin-block-start: 60px;
-  width: 1024px;
-  height: 768px;
+  max-width: 1024px;
+  height: 100vh;
   padding: 20px;
   position: relative;
 }
@@ -349,28 +349,27 @@
   }
 
   .list-title {
-    max-width: 100vw;
+    width: 100%;
   }
 
   .first-section {
-    width: 768px;
+    max-width: 768px;
   }
 
   .fisrt-section_list {
     padding-left: 5px;
   }
 
-  /* .fst {
-    width: 472px;
-  } */
+  .fisrt-section_list-item {
+    max-width: 472px;
+  }
 
   .section-title {
     max-width: 236px;
   }
 
-  .section-text {
-    width: fit-content;
-    height: min-content;
+  .second-section {
+
   }
 
   .second-section_list {
@@ -379,26 +378,135 @@
     gap: 0;
   }
 
-  .second-section_list-item {
-    gap: 10px;
-  }
-
   .third-section {
     margin-block-start: 75px;
-  }
-
-  .third-section_list {
-    max-width: 472px;
-    height: min-content;
-    /* padding-inline-end: 30px; */
-  }
-
-  .third-section_list-item {
-    
+    gap: 7px;
   }
 
   .footer {
     width: 768px;
     height: 1024px;
   }
+}
+
+@media (width <= 375px) {
+
+  .page {
+    width: 375px;
+  }
+
+  .header {
+    max-width: 375px;
+    grid-template-areas: 
+    "btn"
+    "focus"
+    "text";
+    padding: 10px;
+  }
+
+  .header-title {
+    font-size: var(--mtitlesize);
+    max-width: 355px;
+    line-height: 95.7px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: center;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header-text {
+    max-width: 355px;
+  }
+
+  .header-text_container {
+    justify-self: start;
+    align-self: center;
+    margin-block-start: 0;
+  }
+
+  .dark-theme-decoration::before {
+    top: 11px;
+    right: 39px;
+  }
+
+  .decoration-point::before {
+    top: 17px;
+    right: 20px;
+  }
+
+  .decorated-zone::before {
+    top: 10px;
+    right: 10px;
+  }
+
+  .decorated-zone::after {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .first-section {
+    display: flex;
+    flex-direction: column;
+    margin-block-start: 40px;
+    padding: 0 10px;
+    gap: 20px;
+  }
+
+  .fisrt-section_list-item {
+    max-width: 355px;
+  }
+
+  .second-section {
+    margin-block-start: 50px;
+    padding: 0 10px;
+    gap: 21px;
+  }
+
+  .second-section_list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .third-section {
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+    margin-block-start: 50px;
+    padding: 0 10px;
+  }
+
+  .third-section_list {
+    padding: 0;
+  }
+
+  .gallery-section {
+    margin-block-start: 50px;
+    padding: 0 10px;
+  }
+
+  .a {
+    margin-bottom: 10px;
+  }
+
+  .pictures-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .footer {
+    margin-block-start: 40px;
+    padding: 10px;
+  }
+
+  .footer-title {
+    font-size: var(--mtitlesize);
+  }
+
 }
