--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,11 @@
   --fsize: 18px;
   --titlesize: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --mtitlesize: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  --mainlineh: 23.4px;
+  --mainlineh: 23px;
   --mainfontf: 'IBM Plex mono';
+  --bgimage: url(../images/cover-image-dark.png);
+  --tcolor: #000028;
+  --tbckcolor: #FF0070;
+  --focuscolor: #DB00FF;
+  --sectxtcolor: #F1B2CE;
 }
