--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  max-width: 1024px;
-  font-family: var(--mainfontf);
-  background-image: var(--bgimage);
+  max-inline-size: 1024px;
+  font-family: var(--mainfontf, 'IBM Plex mono', monospace);
+  background-image: var(--bgimage, url(../images/cover-image-dark.png));
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
@@ -16,8 +16,8 @@
   "btn btn btn"
   "focus focus ."
   ". text text";
-  max-width: 1024px;
-  height: 100vh;
+  max-inline-size: 1024px;
+  block-size: 100vh;
   margin: 0 auto;
   grid-template-rows: 1fr auto 1fr;
   padding: 20px 20px 20px 0; 
@@ -40,9 +40,9 @@
 .header__theme-menu-button {
   background-color: transparent;
   border: none;
-  width: 70px;
-  height: 26px;
-  color: var(--tbckcolor);
+  inline-size: 70px;
+  block-size: 26px;
+  color: var(--tbckcolor, #ff0070);
   text-transform: lowercase;
   padding: 0 13px 5px 13px;
 }
@@ -53,42 +53,42 @@
 
 .header__theme-menu-button:focus-visible {
   outline: none;
-  border-bottom: 1px solid var(--tbckcolor);
+  border-bottom: 1px solid var(--tbckcolor, #ff0070);
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--tbckcolor);   
+  outline: 1px solid var(--tbckcolor, #ff0070);   
   pointer-events: none;
 }
 
 .header-text_container {
   grid-area: text;
-  max-width: 491px;
+  max-inline-size: 491px;
   justify-self: end;
-  margin-top: 79px;
+  margin-block-start: 79px;
 }
 
 .title-decor {
-  background-color: var(--tbckcolor);
+  background-color: var(--tbckcolor, #ff0070);
 }
 
 .header-text {
   font-family: inherit;
   font-weight: bold;
   font-size: var(--fsize, 18px);
-  color: var(--tcolor);
+  color: var(--tcolor, #000028);
 }
 
 .header-title_container {
   grid-area: focus;
-  width: 759px;
+  max-inline-size: 759px;
 }
 
 .header-title {
   font-size: var(--titlesize);
   font-family: inherit;
-  color: var(--focuscolor);
-  text-shadow: 4px 4px 0px var(--tbckcolor);
+  color: var(--focuscolor, #DB00FF);
+  text-shadow: 4px 4px 0px var(--tbckcolor, #ff0070);
 }
 
 .dark-theme-decoration::before {
@@ -97,9 +97,9 @@
   top: 0;
   right: 0;
   font-family: inherit;
-  font-size: var(--fsize);
+  font-size: var(--fsize, 18px);
   text-transform: uppercase;
-  color: var(--tbckcolor);
+  color: var(--tbckcolor, #ff0070);
   inset-inline-end: 50px;
   inset-block-start: 22px;
 }
@@ -114,8 +114,8 @@
   border-radius: 50%;
   inset-inline-end: 30px;
   inset-block-start: 30px;
-  background-color: var(--tbckcolor);
-  box-shadow: 0px 0px 3px 2px var(--tbckcolor);
+  background-color: var(--tbckcolor, #ff0070);
+  box-shadow: 0px 0px 3px 2px var(--tbckcolor, #ff0070 );
 }
 
 .decorated-zone::before {
@@ -128,8 +128,8 @@
   top: 0;
   inset-inline-end: 20px;
   inset-block-start: 20px;
-  border-inline-end: 1px solid var(--tbckcolor);
-  border-block-start: 1px solid var(--tbckcolor);
+  border-inline-end: 1px solid var(--tbckcolor, #ff0070);
+  border-block-start: 1px solid var(--tbckcolor, #ff0070);
 
 }
 
@@ -143,15 +143,15 @@
   left: 0;
   inset-block-end: 20px;
   inset-inline-start: 19px;
-  border-inline-start: 1px solid var(--tbckcolor);
-  border-block-end: 1px solid var(--tbckcolor);
+  border-inline-start: 1px solid var(--tbckcolor, #ff0070);
+  border-block-end: 1px solid var(--tbckcolor, #ff0070);
 }
 
 .first-section {
   display: grid;
   grid-template-columns: 33% 67%;
   gap: 10px;
-  margin-top: 60px;
+  margin-block-start: 60px;
   padding: 0 20px;
   font-family: var(--mainfontf);
 }
@@ -167,38 +167,38 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-width: 648px;
+  max-inline-size: 648px;
 }
 
 .section-title {
-  font-size: var(--fsize);
-  color: var(--tbckcolor);
+  font-size: var(--fsize, 18px);
+  color: var(--tbckcolor, #ff0070);
   font-family: inherit;
 }
 
 .section-text {
-  font-size: var(--fsize);
+  font-size: var(--fsize, 18px);
   font-family: inherit;
-  color: var( --sectxtcolor);
+  color: var( --sectxtcolor, #F1B2CE);
 }
 
 .txt-link {
-  text-shadow: 2px 2px 0px var(--tbckcolor);
+  text-shadow: 2px 2px 0px var(--tbckcolor, #ff0070);
 }
 
 .txt-link:hover {
   cursor: pointer;
-  border-bottom: 1px solid var(--sectxtcolor);
+  border-bottom: 1px solid var(--sectxtcolor, #F1B2CE);
   text-underline-offset: 2px;
 }
 
 .txt-link:focus-visible {
-  outline: 1px solid var(--sectxtcolor);
+  outline: 1px solid var(--sectxtcolor, #F1B2CE);
 }
 
 .list-title {
-  font-size: var(--fsize);
-  color: var(--tcolor);
+  font-size: var(--fsize, 18px);
+  color: var(--tcolor, #000028);
   line-height: 23.4px;
 }
 
@@ -206,9 +206,9 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 80px;
+  margin-block-start: 80px;
   padding: 0 20px;
-  font-family: 'IBM Plex mono';
+  font-family: var(--mainfontf, 'IBM Plex mono', monospace);
 }
 
 .second-section_list {
@@ -227,9 +227,9 @@
 .third-section {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  margin-top: 80px;
+  margin-block-start: 80px;
   padding: 0 20px;
-  font-family: 'IBM Plex mono';
+  font-family: var(--mainfontf, 'IBM Plex mono', monospace);
 }
 
 .third-section_list {
@@ -237,7 +237,7 @@
   flex-direction: column;
   gap: 20px;
   line-height: 23.4px;
-  padding-left: 8px;
+  padding-inline-start: 8px;
 }
 
 .third-section_list-item {
@@ -247,7 +247,7 @@
 }
 
 .gallery-section {
-  margin-top: 80px;
+  margin-block-start: 80px;
   padding: 0 20px;
 }
 
@@ -291,7 +291,7 @@
 }
 
 .gallery-section_title {
-  margin-bottom: 20px;
+  margin-block-end: 20px;
 }
 
 .footer {
@@ -299,22 +299,22 @@
   justify-content: center;
   align-items: center;
   margin-block-start: 60px;
-  max-width: 1024px;
-  height: 100vh;
+  max-inline-size: 1024px;
+  block-size: 100vh;
   padding: 20px;
   position: relative;
 }
 
 .footer-title {
   font-size: var(--titlesize);
-  color: var(--focuscolor);
-  text-shadow: 2px 2px 0px var(--tbckcolor);
+  color: var(--focuscolor, #DB00FF);
+  text-shadow: 2px 2px 0px var(--tbckcolor, #ff0070);
 }
 
 @media (575px < width < 915px) {
 
   .page {
-    max-width: 768px;
+    max-inline-size: 768px;
     
   }
 
@@ -340,7 +340,7 @@
   }
 
   .header-text_container {
-    max-width: 364px;
+    max-inline-size: 364px;
     justify-self: end;
     align-self: center;
     margin-block-start: 0;
@@ -349,7 +349,7 @@
   }
 
   .list-title {
-    width: 100%;
+    inline-size: 100%;
   }
 
   .fisrt-section_list {
@@ -357,11 +357,11 @@
   }
 
   .fisrt-section_list-item {
-    max-width: 472px;
+    max-inline-size: 472px;
   }
 
   .section-title {
-    max-width: 236px;
+    max-inline-size: 236px;
   }
 
   .second-section_list {
@@ -384,11 +384,10 @@
 @media (width <= 375px) {
 
   .page {
-    width: 375px;
+    max-inline-size: 375px;
   }
 
   .header {
-    max-width: 375px;
     grid-template-areas: 
     "btn"
     "focus"
@@ -398,12 +397,12 @@
 
   .header-title {
     font-size: var(--mtitlesize);
-    max-width: 355px;
+    max-inline-size: 355px;
     line-height: 95.7px;
   }
 
   .header-title_container {
-    max-width: 355px;
+    max-inline-size: 355px;
   }
 
   .header__theme-menu {
@@ -420,7 +419,7 @@
     justify-self: start;
     align-self: center;
     margin-block-start: 0;
-    max-width: 355px;
+    max-inline-size: 355px;
   }
 
   .dark-theme-decoration::before {
@@ -452,7 +451,7 @@
   }
 
   .fisrt-section_list-item {
-    max-width: 355px;
+    max-inline-size: 355px;
   }
 
   .second-section {
