--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,7 +7,7 @@
   --titlesize: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --mtitlesize: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --mainlineh: 23px;
-  --mainfontf: 'IBM Plex mono';
+  --mainfontf: 'IBM Plex mono', monospace;
   --bgimage: url(../images/cover-image-dark.png);
   --tcolor: #000028;
   --tbckcolor: #FF0070;
