--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,12 @@
   max-inline-size: 1024px;
   font-family: var(--mainfontf, 'IBM Plex mono', monospace);
   background-image: var(--bgimage, url(../images/cover-image-dark.png));
+  background-color: #000;
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
   background-attachment: fixed;
+  margin: 0 auto;
 }
 
 .header {
@@ -18,6 +20,7 @@
   ". text text";
   max-inline-size: 1024px;
   block-size: 100vh;
+  min-block-size: 668px;
   margin: 0 auto;
   grid-template-rows: 1fr auto 1fr;
   padding: 20px 20px 20px 0; 
@@ -40,15 +43,20 @@
 .header__theme-menu-button {
   background-color: transparent;
   border: none;
-  inline-size: 70px;
-  block-size: 26px;
-  color: var(--tbckcolor, #ff0070);
+  max-inline-size: 70px;
+  min-block-size: 26px;
+  color: var( --button_color, #ff0070);
   text-transform: lowercase;
   padding: 0 13px 5px 13px;
 }
 
 .header__theme-menu-button:hover {
   cursor: pointer;
+  outline: 1px solid var(--button_hover_color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -57,7 +65,7 @@
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--tbckcolor, #ff0070);   
+  outline: 1px solid var( --button_color, #ff0070);   
   pointer-events: none;
 }
 
@@ -79,19 +87,16 @@
   color: var(--tcolor, #000028);
 }
 
-.header-title_container {
+.header-title {
   grid-area: focus;
   max-inline-size: 759px;
-}
-
-.header-title {
-  font-size: var(--titlesize);
+  font-size: var(--titlesize, clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem));
   font-family: inherit;
   color: var(--focuscolor, #DB00FF);
-  text-shadow: 4px 4px 0px var(--tbckcolor, #ff0070);
+  text-shadow: 4px 4px 0px var(--title_shadow_color, #ff0070);
 }
 
-.dark-theme-decoration::before {
+.header_decoration::before {
   position: absolute;
   content: 'rec';
   top: 0;
@@ -104,7 +109,7 @@
   inset-block-start: 22px;
 }
 
-.decoration-point::before {
+.header_decoration::after {
   content: '';
   position: absolute;
   inline-size: 9px;
@@ -115,13 +120,13 @@
   inset-inline-end: 30px;
   inset-block-start: 30px;
   background-color: var(--tbckcolor, #ff0070);
-  box-shadow: 0px 0px 3px 2px var(--tbckcolor, #ff0070 );
+  box-shadow: 0px 0px 4px 2px var(--tbckcolor, #ff0070 );
 }
 
 .decorated-zone::before {
   content: '';
   position: absolute;
-  display: inline-block;
+  display: block;
   inline-size: 25px;
   block-size: 25px;
   right: 0;
@@ -130,13 +135,12 @@
   inset-block-start: 20px;
   border-inline-end: 1px solid var(--tbckcolor, #ff0070);
   border-block-start: 1px solid var(--tbckcolor, #ff0070);
-
 }
 
 .decorated-zone::after {
   content: '';
   position: absolute;
-  display: inline-block;
+  display: block;
   inline-size: 25px;
   block-size: 25px;
   bottom: 0;
@@ -147,32 +151,32 @@
   border-block-end: 1px solid var(--tbckcolor, #ff0070);
 }
 
-.first-section {
+.why-section {
   display: grid;
   grid-template-columns: 33% 67%;
   gap: 10px;
   margin-block-start: 60px;
   padding: 0 20px;
-  font-family: var(--mainfontf);
+  font-family: var(--mainfontf, 'IBM Plex mono', monospace);
 }
 
-.fisrt-section_list {
+.why-section_list {
   display: flex;
   flex-direction: column;
   gap: 20px;
   line-height: 23.4px;
+  max-inline-size: 648px;
 }
 
-.fisrt-section_list-item {
+.section_list-item {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-inline-size: 648px;
 }
 
 .section-title {
   font-size: var(--fsize, 18px);
-  color: var(--tbckcolor, #ff0070);
+  color: var(--section_title_color, #ff0070);
   font-family: inherit;
 }
 
@@ -184,12 +188,17 @@
 
 .txt-link {
   text-shadow: 2px 2px 0px var(--tbckcolor, #ff0070);
+  text-decoration: none;
 }
 
 .txt-link:hover {
   cursor: pointer;
   border-bottom: 1px solid var(--sectxtcolor, #F1B2CE);
   text-underline-offset: 2px;
+}
+
+.txt-link:focus {
+  outline: none;
 }
 
 .txt-link:focus-visible {
@@ -202,7 +211,7 @@
   line-height: 23.4px;
 }
 
-.second-section {
+.which-section {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -211,20 +220,14 @@
   font-family: var(--mainfontf, 'IBM Plex mono', monospace);
 }
 
-.second-section_list {
+.which-section_list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  line-height: 23.4px;
 }
 
-.second-section_list-item {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.third-section {
+.how-section {
   display: grid;
   grid-template-columns: 1fr 2fr;
   margin-block-start: 80px;
@@ -232,18 +235,12 @@
   font-family: var(--mainfontf, 'IBM Plex mono', monospace);
 }
 
-.third-section_list {
+.how-section_list {
   display: flex;
   flex-direction: column;
   gap: 20px;
   line-height: 23.4px;
   padding-inline-start: 8px;
-}
-
-.third-section_list-item {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
 }
 
 .gallery-section {
@@ -263,31 +260,27 @@
 .picture {
   inline-size: 100%;
   block-size: 100%;
+  object-fit: cover;
 }
 
 .sunset {
   grid-area: s;
-  object-fit: cover;
 }
 
 .tape {
   grid-area: t;
-  object-fit: cover;
 }
 
 .books {
   grid-area: b;
-  object-fit: cover;
 }
 
 .ice-cream {
   grid-area: i;
-  object-fit: cover;
 }
 
 .street {
   grid-area: st;
-  object-fit: cover;
 }
 
 .gallery-section_title {
@@ -301,36 +294,29 @@
   margin-block-start: 60px;
   max-inline-size: 1024px;
   block-size: 100vh;
+  min-block-size: 668px;
   padding: 20px;
   position: relative;
 }
 
 .footer-title {
-  font-size: var(--titlesize);
+  font-size: var(--titlesize, clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem));
   color: var(--focuscolor, #DB00FF);
-  text-shadow: 2px 2px 0px var(--tbckcolor, #ff0070);
+  text-shadow: 2px 2px 0px var(--title_shadow_color, #ff0070);
 }
 
-@media (575px < width < 915px) {
-
-  .page {
-    max-inline-size: 768px;
-    
-  }
+@media ( width <= 768px ) {
 
   .header {
     grid-template-areas: 
     "btn btn"
     "focus focus"
     "text text";
-    width: 768px;
-    margin: 0 auto;
   }
 
   .header__theme-menu {
     align-self: center;
     justify-self: end;
-    margin-inline-end: 10px;
     margin-block-start: 25px;
   }
 
@@ -339,24 +325,23 @@
     flex-direction: column;
   }
 
+  .header-title {
+    text-shadow: 4px 4px 0px var(--tbckcolor, #ff0070);
+  }
+
   .header-text_container {
     max-inline-size: 364px;
-    justify-self: end;
     align-self: center;
     margin-block-start: 0;
     margin-block-end: 30px;
-    margin-inline-end: 10px;
   }
 
   .list-title {
     inline-size: 100%;
   }
 
-  .fisrt-section_list {
+  .why-section_list {
     padding-inline-start: 5px;
-  }
-
-  .fisrt-section_list-item {
     max-inline-size: 472px;
   }
 
@@ -364,7 +349,7 @@
     max-inline-size: 236px;
   }
 
-  .second-section_list {
+  .which-section_list {
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: auto;
     gap: 0;
@@ -372,20 +357,16 @@
     margin-bottom: 5px;
   }
 
-  .third-section {
+  .how-section {
     gap: 7px;
   }
 
-  .footer {
-    height: 100vh;
+  .footer-title {
+    text-shadow: 4px 4px 0px var(--tbckcolor, #ff0070);
   }
 }
 
-@media (width <= 375px) {
-
-  .page {
-    max-inline-size: 375px;
-  }
+@media (width <= 450px) {
 
   .header {
     grid-template-areas: 
@@ -396,7 +377,7 @@
   }
 
   .header-title {
-    font-size: var(--mtitlesize);
+    font-size: var(--mtitlesize, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
     max-inline-size: 355px;
     line-height: 95.7px;
   }
@@ -406,28 +387,26 @@
   }
 
   .header__theme-menu {
-    justify-self: end;
-    align-self: center;
+    margin-block-end: 30px;
   }
 
-  .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
+  .header__theme-menu-button {
+    padding: 0 13px;
   }
 
   .header-text_container {
     justify-self: start;
     align-self: center;
-    margin-block-start: 0;
-    max-inline-size: 355px;
+    margin-block-start: 25px;
+    min-inline-size: 355px;
   }
 
-  .dark-theme-decoration::before {
+  .header_decoration::before {
     top: 11px;
     right: 39px;
   }
 
-  .decoration-point::before {
+  .header_decoration::after {
     top: 17px;
     right: 20px;
   }
@@ -442,7 +421,11 @@
     left: 10px;
   }
 
-  .first-section {
+  .section-title {
+    max-inline-size: 355px;
+  }
+
+  .why-section {
     display: flex;
     flex-direction: column;
     margin-block-start: 40px;
@@ -450,30 +433,36 @@
     gap: 20px;
   }
 
-  .fisrt-section_list-item {
+  .why-section_list {
+    padding-inline-start: 0;
+  }
+
+  .section_list-item {
     max-inline-size: 355px;
   }
 
-  .second-section {
+  .which-section {
     margin-block-start: 50px;
     padding: 0 10px;
     gap: 21px;
   }
 
-  .second-section_list {
+  .which-section_list {
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    line-height: 23.4px;
   }
 
-  .third-section {
+  .how-section {
     display: flex;
     flex-direction: column;
-    gap: 21px;
+    gap: 20px;
     margin-block-start: 50px;
     padding: 0 10px;
   }
 
-  .third-section_list {
+  .how-section_list {
     padding: 0;
   }
 
@@ -498,7 +487,8 @@
   }
 
   .footer-title {
-    font-size: var(--mtitlesize);
+    font-size: var(--mtitlesize, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
   }
 
 }
+
