--- a/styles/light.css
+++ b/styles/light.css
@@ -17,10 +17,12 @@
     --section_title_color: #353430;
     --button_hover_color: rgba(50, 49, 45, 0.40);
     --bgimage: url(../images/cover-image-light.png);
+    --bg_color: #fff;
+    --header_decor_color: #353430;
 
     
     background-image: var(--bgimage, url(../images/cover-image-light.png));
-    background-color: #fff;
+    background-color: var(--bg_color, #fff);
 
 }
 
