--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   max-inline-size: 1024px;
   font-family: var(--mainfontf, 'IBM Plex mono', monospace);
   background-image: var(--bgimage, url(../images/cover-image-dark.png));
-  background-color: #000;
+  background-color: var(--bg_color);
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
@@ -61,7 +61,7 @@
 
 .header__theme-menu-button:focus-visible {
   outline: none;
-  border-bottom: 1px solid var(--tbckcolor, #ff0070);
+  border-bottom: 1px solid var(--header_decor_color, #ff0070);
 }
 
 .header__theme-menu-button_active {
@@ -133,8 +133,8 @@
   top: 0;
   inset-inline-end: 20px;
   inset-block-start: 20px;
-  border-inline-end: 1px solid var(--tbckcolor, #ff0070);
-  border-block-start: 1px solid var(--tbckcolor, #ff0070);
+  border-inline-end: 1px solid var(--header_decor_color, #ff0070);
+  border-block-start: 1px solid var(--header_decor_color, #ff0070);
 }
 
 .decorated-zone::after {
@@ -147,25 +147,15 @@
   left: 0;
   inset-block-end: 20px;
   inset-inline-start: 19px;
-  border-inline-start: 1px solid var(--tbckcolor, #ff0070);
-  border-block-end: 1px solid var(--tbckcolor, #ff0070);
+  border-inline-start: 1px solid var(--header_decor_color, #ff0070);
+  border-block-end: 1px solid var(--header_decor_color, #ff0070);
 }
 
-.why-section {
-  display: grid;
-  grid-template-columns: 33% 67%;
-  gap: 10px;
-  margin-block-start: 60px;
-  padding: 0 20px;
-  font-family: var(--mainfontf, 'IBM Plex mono', monospace);
-}
-
-.why-section_list {
+.section_list {
   display: flex;
   flex-direction: column;
   gap: 20px;
   line-height: 23.4px;
-  max-inline-size: 648px;
 }
 
 .section_list-item {
@@ -211,6 +201,15 @@
   line-height: 23.4px;
 }
 
+.why-section {
+  display: grid;
+  grid-template-columns: 32% 2fr;
+  gap: 20px;
+  margin-block-start: 60px;
+  padding: 0 20px;
+  font-family: var(--mainfontf, 'IBM Plex mono', monospace);
+}
+
 .which-section {
   display: flex;
   flex-direction: column;
@@ -220,27 +219,18 @@
   font-family: var(--mainfontf, 'IBM Plex mono', monospace);
 }
 
-.which-section_list {
- display: grid;
- grid-template-columns: repeat(3, 1fr);
- gap: 20px;
- line-height: 23.4px;
+.three-columns_list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .how-section {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 32% 2fr;
   margin-block-start: 80px;
+  gap: 20px;
   padding: 0 20px;
   font-family: var(--mainfontf, 'IBM Plex mono', monospace);
-}
-
-.how-section_list {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  line-height: 23.4px;
-  padding-inline-start: 8px;
 }
 
 .gallery-section {
@@ -321,7 +311,6 @@
   }
 
   .header__theme-menu-list {
-    display: flex;
     flex-direction: column;
   }
 
@@ -336,29 +325,21 @@
     margin-block-end: 30px;
   }
 
-  .list-title {
-    inline-size: 100%;
-  }
-
-  .why-section_list {
-    padding-inline-start: 5px;
-    max-inline-size: 472px;
-  }
-
   .section-title {
-    max-inline-size: 236px;
+    max-inline-size: 235px;
   }
 
-  .which-section_list {
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: auto;
-    gap: 0;
-    line-height: var(--mainlineh);
-    margin-bottom: 5px;
+  .why-section {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .three-columns_list {
+    display: flex;
+    flex-direction: column;
   }
 
   .how-section {
-    gap: 7px;
+    grid-template-columns: 1fr 2fr;
   }
 
   .footer-title {
@@ -366,7 +347,7 @@
   }
 }
 
-@media (width <= 450px) {
+@media ( width <= 570px) {
 
   .header {
     grid-template-areas: 
@@ -396,7 +377,6 @@
 
   .header-text_container {
     justify-self: start;
-    align-self: center;
     margin-block-start: 25px;
     min-inline-size: 355px;
   }
@@ -433,12 +413,8 @@
     gap: 20px;
   }
 
-  .why-section_list {
-    padding-inline-start: 0;
-  }
-
   .section_list-item {
-    max-inline-size: 355px;
+    max-inline-size: 100%;
   }
 
   .which-section {
@@ -447,23 +423,12 @@
     gap: 21px;
   }
 
-  .which-section_list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    line-height: 23.4px;
-  }
-
   .how-section {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-block-start: 50px;
     padding: 0 10px;
-  }
-
-  .how-section_list {
-    padding: 0;
   }
 
   .gallery-section {
