--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@
   font-family: inherit;
   font-weight: bold;
   font-size: var(--fsize, 18px);
-  color: var(--sectxtcolor, #353430);
+  color: var(--tcolor, #000028);
 }
 
 .header-title {
@@ -198,7 +198,7 @@
 
 .list-title {
   font-size: var(--fsize, 18px);
-  color: var(--sectxtcolor, #353430);
+  color: var(--tcolor, #000028);
   line-height: 23.4px;
 }
 
